tests/compile_fail/general_struct_err.rs
use encase::WgslType;

fn main() {}

#[derive(WgslType)]
struct Test;
